# measurements

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  anovan.m  measurementsConfig.cmake.in  normal_distribution.plt  package.json
doc/: Doxyfile
doc/html/: _formulas.tex  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  interfacemeasurements__c__api_1_1c__window__function-members.html  interfacemeasurements__c__api_1_1c__window__function.html  interfacemeasurements__c__api_1_1c__window__function.js  interfacemeasurements__core_1_1distribution__function-members.html  interfacemeasurements__core_1_1distribution__function.html  interfacemeasurements__core_1_1distribution__function.js  interfacemeasurements__core_1_1distribution__parameter-members.html  interfacemeasurements__core_1_1distribution__parameter.html  interfacemeasurements__core_1_1distribution__parameter.js  interfacemeasurements__core_1_1distribution__set__model__parameters-members.html  interfacemeasurements__core_1_1distribution__set__model__parameters.html  interfacemeasurements__core_1_1distribution__set__model__parameters.js  interfacemeasurements__core_1_1interp__xy-members.html  interfacemeasurements__core_1_1interp__xy.html  interfacemeasurements__core_1_1interp__xy.js  interfacemeasurements__core_1_1window__function-members.html  interfacemeasurements__core_1_1window__function.html  interfacemeasurements__core_1_1window__function.js  measurement__stats_8f90_source.html  measurements_8h_source.html  measurements__anova_8f90_source.html  measurements__array_8f90_source.html  measurements__c__api_8f90_source.html  measurements__core_8f90_source.html  measurements__distribution_8f90_source.html  (+94 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+18 more)
examples/: CMakeLists.txt  anova_example.f90  anova_example_2.f90  c_anova_example.c  c_interpolation_example.c  distribution_example.f90  interpolation_example.f90  peak_detect_example.f90  specials_example.f90
include/: measurements.h
src/: CMakeLists.txt  measurement_stats.f90  measurements_anova.f90  measurements_array.f90  measurements_c_api.f90  measurements_core.f90  measurements_distribution.f90  measurements_filter.f90  measurements_interp.f90  measurements_peak.f90  measurements_regression.f90  measurements_smoothing.f90  measurements_special.f90  measurements_spectrum.f90
tests/: CMakeLists.txt  c_array.c  c_array.h  c_interp_tests.c  c_stats_tests.c  c_test_macros.h  interp_tests.f90  measurement_interp_tests.f90  measurement_signals_tests.f90  measurement_stats_tests.f90  regression_tests.f90  signals_tests.f90  special_fcn_tests.f90  stats_tests.f90
